--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,16 +13,14 @@
     android:theme="@style/Theme.MyApplication">
     <activity
       android:name=".MainActivity"
-      android:exported="true">
+      android:configChanges="orientation|keyboardHidden|screenSize|uiMode"
+      android:exported="true"
+      android:windowSoftInputMode="adjustResize" >
       <intent-filter>
         <action android:name="android.intent.action.MAIN" />
 
         <category android:name="android.intent.category.LAUNCHER" />
       </intent-filter>
     </activity>
-    <activity
-      android:name=".ShowXMLActivity"
-      android:exported="true"/>
-    
   </application>
 </manifest>
