--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.6.0'
     implementation 'com.google.android.material:material:1.7.0'
     implementation 'com.blankj:utilcodex:1.31.1'
+    implementation 'org.apache.commons:commons-text:1.9'
     implementation(platform("io.github.Rosemoe.sora-editor:bom:0.21.0"))
     implementation("io.github.Rosemoe.sora-editor:editor")
     implementation("io.github.Rosemoe.sora-editor:language-textmate")
